--- a/coursemix/package.json
+++ b/coursemix/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.48.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
