--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 */.next
 */node_modules
+
+# Environment Variables
+*/.env
+*/.env.local
+*/.env.development.local
+*/.env.test.local
+*/.env.production.local 
