--- a/.github/workflows/daily-tests.yml
+++ b/.github/workflows/daily-tests.yml
@@ -2,7 +2,7 @@ name: Daily Jest Tests
 
 on:
   schedule:
-    - cron: '0 2 * * *'  # Runs every day at 2 AM UTC
+    - cron: '0 2 * * *'  # Runs every day at 10 PM EST
   workflow_dispatch:     # Allows you to manually trigger it
 
 jobs:
