--- a/coursemix/package.json
+++ b/coursemix/package.json
@@ -3,12 +3,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:component": "node scripts/run-tests.js",
-    "test:component:coverage": "node scripts/run-tests.js --coverage"
+    "start": "next start"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -20,11 +15,12 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/lodash.debounce": "^4.0.9",
     "autoprefixer": "10.4.20",
-    "bad-words": "^4.0.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.468.0",
     "next": "latest",
@@ -32,22 +28,14 @@
     "prettier": "^3.3.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "resend": "^4.1.2",
-    "sonner": "^2.0.2"
+    "sonner": "^2.0.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
-    "@types/jest-axe": "^3.5.9",
     "@types/node": "22.10.2",
     "@types/react": "^19.0.2",
     "@types/react-dom": "19.0.2",
-    "jest": "^29.7.0",
-    "jest-axe": "^10.0.0",
-    "jest-environment-jsdom": "^29.7.0",
     "postcss": "8.4.49",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.17",
