--- a/coursemix/package.json
+++ b/coursemix/package.json
@@ -25,6 +25,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.468.0",
     "next": "latest",
